[package]
name = "two-trucs"
version = "0.1.0"
authors = ["Trevor Elliott <awesomelyawesome@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1.8"
clap = "2.33.3"
pulldown-cmark = "0.8.0"

[dev-dependencies]
colored-diff = "0.2.2"

[[bin]]
name = "two-trucs"
path = "src/main.rs"
test = false

[lib]
path = "src/lib.rs"
test = false

[[test]]
name = "exp_tests"
path = "tests/exp_tests.rs"
test = true
harness = false
