[package]
name = "two-trucs"
version = "0.1.0"
authors = ["Trevor Elliott <awesomelyawesome@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1.8"
clap = { version = "4.1.10", features = ["derive"] }
pulldown-cmark = "0.9.2"

[dev-dependencies]
colored-diff = "0.2.2"

[[bin]]
name = "two-trucs"
path = "src/main.rs"
test = false

[lib]
path = "src/lib.rs"
test = false

[[test]]
name = "exp_tests"
path = "tests/exp_tests.rs"
test = true
harness = false
